deployment_other.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      containers:
      - name: other
        image: bulutmf/test:latest
        ports:
        - containerPort: 8080
