deployment_other_service.yml
apiVersion: v1
kind: Service
metadata:
  name: other-service
spec:
  type: NodePort
  selector:
    app: other
  ports:
  - name: other-port
    protocol: TCP
    nodePort: 30003
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: other
  template:
    metadata:
      labels:
        app: other
    spec:
      containers:
      - name: other
        image: bulutmf/test:latest
        ports:
        - containerPort: 8080
