deny_analytics_policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-analytics-policy
spec:
  podSelector:
    matchLabels:
      app: analytics
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
