deny_network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
